<resources>
    <string name="app_name">PharmacyCounter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_sign_in">Đăng nhập Thành viên</string>
    <string name="title_edittext_sdt_sign_in">Số điện thoại*</string>
    <string name="title_edittext_forgot_sdt">Số điện thoại*</string>
    <string name="title_edittext_password_sign_in">Mật khẩu*</string>
    <string name="title_button_sign_in">Đăng nhập</string>
    <string name="title_button_forgot">Gửi*</string>
    <string name="title_button_sign_up">Đăng ký</string>
    <string name="title_textview_register_account_sign_in">Bạn chưa có tài khoản ? Đăng ký</string>
    <string name="title_textview_forgot_password_sign_in">Quên mật khẩu ?</string>
    <string name="title_textview_sign_up">Đăng Ký Thành Viên</string>
    <string name="title_ed_ho_ten_sign_up">Họ tên*</string>
    <string name="title_ed_ten_nha_thuoc_sign_up">Tên nhà thuốc*</string>
    <string name="title_ed_sdt_sign_up">Số điện thoại*</string>
    <string name="title_ed_email_sign_up">Email</string>
    <string name="title_ed_dia_chi_sign_up">Địa chỉ nhà thuốc*</string>
    <string name="title_ed_mat_khau_sign_up">Mật khẩu*</string>
    <string name="title_ed_dia_chi1_sign_up">Địa chỉ*</string>
    <string name="validate_tv_full_name">Vui lòng nhập họ tên</string>
    <string name="validate_tv_name_counter">Vui lòng nhập số điện thoại</string>
    <string name="validate_tv_email_counter">Vui lòng nhập email</string>
    <string name="validate_tv_counter_address_counter">Vui lòng nhập địa chỉ nhà thuốc</string>
    <string name="validate_tv_customer_address">Vui lòng nhập địa chỉ</string>
    <string name="validate_tv_counter_phone">Vui lòng nhập số điện thoại</string>
    <string name="validate_tv_counter_password">Vui lòng nhập mật khẩu</string>
    <string name="string_not_internet">Not internet</string>
    <string name="string_error">Error</string>
    <string name="string_not_found_view_model">Not found view model</string>
    <string name="string_sign_up_provinces">Tỉnh</string>
    <string name="home">Trang chủ</string>
    <string name="category">Danh mục</string>
    <string name="history">Lịch sử</string>
    <string name="manager">Quản lý</string>
    <string name="string_add_cart_successfully">Thêm sản phẩm vào giỏ hàng thành công</string>
    <string name="string_add_cart_failed">Thêm sản phẩm vào giỏ hàng thất bại</string>
    <string name="validate_tv_counter_image">Yêu cầu chọn ảnh</string>
    <string name="title_button_save">Thêm mới</string>
    <string name="title_button_cancel">Hủy bỏ</string>
    <string name="str_xoa_danh_muc">Xóa danh mục</string>
    <string name="str_xoa_san_pham">Xóa sản phẩm</string>
    <string name="title_edittext_ma_so_thue_sign_in">Mã số thuế</string>
    <string name="title_ed_ghi_chu_sign_up">Ghi chú*</string>
    <string name="title_bill">Thông tin xác nhận đơn hàng</string>
    <string name="bill_title_checkbox">Thanh toán online -0.5%</string>
    <string name="bill_title_tvUsingCoin">Sử dụng coin</string>
    <string name="bill_title_button_create_bill">Tạo đơn</string>
    <string name="title_ed_category">Tên danh mục*</string>
    <string name="title_ed_button_cart">Thêm giỏ hàng</string>
    <string name="detail_history_title_ngayDat">Ngày đặt</string>
    <string name="detail_history_title_date">dd/mm/yyyy</string>
    <string name="detail_history_title_tongHoaDon">Tổng hóa đơn</string>
    <string name="detail_history_title_using_coin">Sử dụng coin được giảm</string>
    <string name="detail_history_title_get_coin">Coin được tặng</string>
    <string name="detail_history_title_tong_tien">Tổng</string>
    <string name="dialog_product_ed_id">Mã sản phẩm</string>
    <string name="dialog_product_tv_nhom_thuoc">Nhóm thuốc*</string>
    <string name="dialog_product_ed_ten">Tên sản phẩm thuốc*</string>
    <string name="dialog_product_ed_can_nang">Cân nặng(g)</string>
    <string name="dialog_product_check_box">Combo</string>
    <string name="dialog_product_ed_don_vi_tinh">Đơn vị tính*</string>
    <string name="dialog_product_khuyen_mai">Khuyến mãi*</string>
    <string name="dialog_product_tv_khuyen_mai">Tên sản phẩm khuyến mãi*</string>
    <string name="dialog_product_ed_so_luong_khuyen_mai">Số lượng khuyến mãi</string>
    <string name="dialog_product_ngay_bat_dau">Ngày bắt đầu khuyến mãi</string>
    <string name="dialog_product_ngay_ket_thuc">Ngày kết thúc khuyến mãi</string>
    <string name="dialog_product_ngay_het_han">Ngày hết hạn</string>
    <string name="dialog_product_subdomain">Subdomain</string>
    <string name="dialog_product_url">Url</string>
    <string name="dialog_product_tv_hinh_anh">Hình ảnh*</string>
    <string name="dialog_product_nha_san_xuat">Nhà sản xuất*</string>
    <string name="dialog_product_nuoc_san_xuat">Nước sản xuất</string>
    <string name="dialog_product_hash_tag">Hashtag</string>
    <string name="dialog_product_so_luong_toi_thieu">Số lượng tối thiểu</string>
    <string name="dialog_product_toi_da">Số lượng tối đa</string>
    <string name="dialog_voucher_title_button">Hủy</string>
    <string name="dialog_voucher_title_voucher">Danh sách voucher</string>
    <string name="dialog_voucher_title_list_empty">Không có voucher nào</string>
    <string name="dialog_cart_title">Giỏ hàng</string>
    <string name="dialog_cart_title_button_continue">Tiếp tục</string>
    <string name="t_ng_ti_n">Tổng tiền</string>
    <string name="_0_vnd">0 VND</string>
    <string name="s_l_ng">Số lượng</string>
    <string name="_0">0</string>
    <string name="t_m_ki_m_s_n_ph_m">Tìm kiếm sản phẩm</string>
    <string name="nh_thu_c">Nhà thuốc</string>
    <string name="nh_i_di_n">Ảnh đại diện *</string>
    <string name="customer_nh_i_di_n">Ảnh đại diện </string>
    <string name="vui_l_ng_ch_n_nh">Vui lòng chọn ảnh</string>
    <string name="ng_k_t_i_kho_n_th_nh_vi_n_b_n_ng_v_i">Đăng ký tài khoản thành viên bạn đã đồng ý với</string>
    <string name="i_u_kho_n_s_d_ng">Điều khoản sử dụng</string>
    <string name="nh_gi_y_ph_p_kinh_doanh">Ảnh giấy phép kinh doanh *</string>
    <string name="chi_ti_t_n_h_ng">Chi tiết đơn hàng</string>
    <string name="qu_n_m_t_kh_u">Quên mật khẩu</string>
    <string name="th_ng_tin_c_nh_n">Thông tin cá nhân</string>
    <string name="qu_n_l_gian_h_ng">Quản lý gian hàng</string>
    <string name="li_n_h">Liên hệ</string>
    <string name="tin_t_c">Tin tức</string>
    <string name="gi_i_thi_u">Giới thiệu</string>
    <string name="ch_nh_s_ch_b_o_m_t">Chính sách bảo mật</string>
    <string name="h_ng_d_n_mua_h_ng">Hướng dẫn mua hàng</string>
    <string name="ch_nh_s_ch_thanh_to_n">Chính sách thanh toán</string>
    <string name="ch_nh_s_ch_giao_h_ng">Chính sách giao hàng</string>
    <string name="ch_nh_s_ch_i_tr">Chính sách đổi trả</string>
    <string name="ng_xu_t">Đăng xuất</string>
    <string name="x_c_nh_n">Xác nhận</string>
    <string name="s_l_ng_0">Số lượng: 0</string>
    <string name="t_ng_ti_n_0_vnd">Tổng tiền: 0 VND</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="close">Đóng lại</string>
    <string name="edit_profile">Chỉnh sửa</string>
    <string name="kh_ng_c_l_ch_s_mua_h_ng">Không có lịch sử mua hàng</string>
    <string name="th_m_gi_h_ng">Thêm giỏ hàng</string>
    <string name="discount">% Discount</string>
    <string name="h_t_h_ng">Hết hàng</string>
    <string name="t_n">Tên</string>
    <string name="quy_c_ch_ng_g_i">Quy cách đóng gói</string>
    <string name="t_ng_coin">Tặng coin</string>
    <string name="s_l_ng_t_i_thi_u_0">Số lượng tối thiểu: 0</string>
    <string name="s_l_ng_t_i_a_0">Số lượng tối đa: 0</string>
    <string name="gi_m_cho_n_h_ng_0_tri_u">Giảm cho đơn hàng 0 triệu</string>
    <string name="ng_y_k_t_th_c_18_09_2003_00_00">Ngày kết thúc: 18-09-2003 00:00</string>
    <string name="_1809">1809</string>
    <string name="date">Date</string>
    <string name="address">Address</string>
    <string name="vnd">VND</string>
    <string name="status">Status</string>
    <string name="s_n_ph_m_khuy_n_m_i">Sản phẩm</string>
    <string name="chinh_sach_bao_hanh">Chính sách bảo hành</string>
    <string name="validate_error_login">Tài khoản hoặc mật khẩu không đúng</string>
    <string name="validate_event_banners">Không có sự kiện nào</string>
    <string name="validate_category_type_empty">Loại danh mục trống</string>
    <string name="validate_category_empty">Danh mục trống</string>
    <string name="validate_product_empty">Sản phẩm trống</string>
    <string name="validate_cart_empty">Giỏ hàng trống</string>
    <string name="validate_search_empty">Không tìm thấy sản phẩm nào</string>
</resources>