<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="16dp"
    android:layout_margin="5dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:id="@+id/item_child_imageProduct"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/ic_add_category"/>
        <TextView
            android:id="@+id/item_child_tvDiscount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_text_view"
            android:text="@string/discount"
            android:padding="10dp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:layout_margin="10dp"/>
        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/item_child_imageProduct"
            android:gravity="center"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/item_child_tvStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/h_t_h_ng"
                android:textAlignment="center"
                android:textColor="#FF0000"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/item_child_tvNameProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/t_n"
                android:lines="2"
                android:ellipsize="end"
                android:textAlignment="textStart"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_child_rcTags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_tags"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal" />
            <TextView
                android:id="@+id/item_child_tvPack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/quy_c_ch_ng_g_i"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/item_child_tvQuality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/s_l_ng"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/item_child_tvBonusCoin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/t_ng_coin"
                android:textColor="#FF9800"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/item_child_tvMinimum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/s_l_ng_t_i_thi_u_0"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/item_child_tvMaximum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/s_l_ng_t_i_a_0"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/item_child_tvPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/_0_vnd"
                android:textColor="#4CAF50"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/item_child_tvDiscountPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/_0_vnd"
                android:textColor="@color/gray"
                android:textAlignment="center"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linear"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/item_child_btnAddCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/th_m_gi_h_ng"
                android:background="@drawable/custom_button"
                android:layout_gravity="bottom|center"
                android:textColor="#FFF"
                android:layout_alignParentBottom="true"
                />
        </RelativeLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>