<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="10dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/item_store_imageProduct"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/ic_add_category"/>
            <TextView
                android:id="@+id/item_store_tvDiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_text_view"
                android:text="@string/discount"
                android:padding="10dp"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:layout_margin="10dp"/>
            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/item_store_imageProduct"
                android:gravity="center"
                android:padding="10dp"
                >
                <TextView
                    android:id="@+id/item_store_tvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="Hết hàng"
                    android:textAlignment="center"
                    android:textColor="#FF0000"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/item_store_tvNameProduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/t_n"
                    android:lines="2"
                    android:ellipsize="end"
                    android:textAlignment="textStart"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/item_store_rcTags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_tags"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal" />
                <TextView
                    android:id="@+id/item_store_tvPack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/quy_c_ch_ng_g_i"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/item_store_tvQuality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/s_l_ng"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/item_store_tvBonusCoin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/t_ng_coin"
                    android:textColor="#FF9800"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/item_store_tvMinimum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/s_l_ng_t_i_thi_u_0"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/item_store_tvMaximum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/s_l_ng_t_i_a_0"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/item_store_tvPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/_0_vnd"
                    android:textColor="#4CAF50"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/item_store_tvDiscountPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/_0_vnd"
                    android:textColor="@color/gray"
                    android:textAlignment="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/linear"
                android:gravity="bottom|center"
                android:orientation="horizontal"
                >
                <ImageView
                    android:id="@+id/item_store_eye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/baseline_remove_red_eye_24"/>
                <ImageView
                    android:id="@+id/item_store_haveInStore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/baseline_data_exploration_24_1"/>
                <ImageView
                    android:id="@+id/item_store_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/baseline_edit_note_24"/>
                <ImageView
                    android:id="@+id/item_store_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@drawable/baseline_delete_forever_24"/>
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>