<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.confirmpayment.PaymentConfirmFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/payment_rcProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_product_confirm_payment"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="#F5F5F5"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/payment_tvQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/s_l_ng_0"
                    android:textStyle="bold"
                    android:layout_centerVertical="true"
                    android:textColor="@color/gray"/>
                <TextView
                    android:id="@+id/payment_tvAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/t_ng_ti_n_0_vnd"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/payment_btnConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/x_c_nh_n" />
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>