<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:background="@drawable/bottomsheet_rounded_background"
    android:orientation="vertical">
    <TextView
        android:id="@+id/dialog_bottom_store_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/green"
        android:text=""
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAlignment="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_bottom_store_layoutEdCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_ed_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_margin="5dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_bottom_store_EdCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_bottom_store_btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/title_button_cancel"
            android:backgroundTint="@color/gray"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dialog_bottom_store_btnSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:text="@string/title_button_save"
            android:backgroundTint="@color/green"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>