<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.registration.login.CounterSignInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#fff"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#4CAF50">
                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/back_arrow"
                    android:layout_margin="10dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#FFFFFF"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/ev_imageview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_pharmacy"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_sign_in"
                    android:textStyle="bold"
                    android:textColor="#4CAF50"
                    android:layout_margin="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/counter_sign_in_layoutPhoneCounter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_edittext_sdt_sign_in"
                    app:helperText=""
                    app:helperTextTextColor="#FF0000"
                    android:layout_margin="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/counter_sign_in_edPhoneCounter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="10"
                        android:singleLine="true"
                        android:lines="1"
                        android:inputType="number"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/counter_sign_in_layoutPasswordCounter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title_edittext_password_sign_in"
                    app:helperText=""
                    app:helperTextTextColor="#FF0000"
                    android:layout_margin="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/counter_sign_in_edPasswordCounter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLength="255"
                        android:singleLine="true"
                        android:lines="1"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/counter_sign_in_btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/title_button_sign_in"
                    android:backgroundTint="#4CAF50"/>
                <TextView
                    android:id="@+id/counter_sign_in_tvRegisterAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_textview_register_account_sign_in"
                    android:textStyle="bold"
                    android:textColor="#4CAF50" />
                <TextView
                    android:id="@+id/counter_sign_in_tvForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_textview_forgot_password_sign_in"
                    android:textStyle="bold"
                    android:textColor="#4CAF50"
                    android:layout_margin="15dp"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>